[project]
name = "NeuroRuler"
authors = [
    { name="Peifeng He", email="hankhe@ad.unc.edu" },
    { name="Madison Lester", email="madiali@email.unc.edu" },
    { name="Eric Schneider", email="eric@cs.unc.edu" },
    { name="Jesse Wei", email="jesse@cs.unc.edu" },
]
description = "A program that calculates head circumference from MRI data (.nii, .nii.gz, .nrrd)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# dependencies set in setup.py
# version set in NeuroRuler/GUI/__init__.py
# keywords set in setup.py
dynamic = ["dependencies", "version", "keywords"]

[project.urls]
"Homepage" = "https://github.com/NIRALUser/NeuroRuler"
"Bug Tracker" = "https://github.com/NIRALUser/NeuroRuler/issues"

[build-system]
requires = ["setuptools>=67.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
