[project]
name = "NeuroRuler"
authors = [
    { name="Peifeng He", email="hankhe@ad.unc.edu" },
    { name="Madison Lester", email="madiali@email.unc.edu" },
    { name="Eric Schneider", email="eric@cs.unc.edu" },
    { name="Jesse Wei", email="jesse@cs.unc.edu" },
]
description = "A program that calculates head circumference from MRI data (.nii, .nii.gz, .nrrd)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# dependencies set in setup.py
# version set in NeuroRuler/GUI/__init__.py
# keywords set in setup.py
dynamic = ["dependencies", "version", "keywords"]

[project.urls]
"Homepage" = "https://github.com/NIRALUser/NeuroRuler"
"Bug Tracker" = "https://github.com/NIRALUser/NeuroRuler/issues"

[build-system]
requires = ["setuptools>=67.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# Source: https://github.com/mmwave-capture-std/mmwave-capture-std/blob/main/pyproject.toml#LL35C1-L65C2

[tool.mypy]
python_version = "3.8"
files = ["NeuroRuler"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
#warn_return_any = true
#warn_unreachable = true

# Don't know what this does
[[tool.mypy.overrides]]
module = [
    "pytest",
]
